# justLLAMA

./: .env.example  .gitignore  README.md  justllama.spec  pyproject.toml  requirements.txt  test_user_skill.py
docs/knowledge/: 00-overview.md  01-architecture.md  02-chat-modes-and-tools.md  03-rag-pipeline.md  04-memory.md  05-skills-and-mcp.md  06-models-server-api.md  07-media-generation.md  08-configuration-and-security.md  README.md
justllama/: __main__.py  main.py
justllama/config/: env.py  settings.py  themes.py
justllama/memory/: long_term.py  manager.py  short_term.py
justllama/models/: browser.py  downloader.py  metadata.py  profiles.py
justllama/rag/: ingestion.py  retriever.py  vectorstore.py
justllama/server/: build.py  chat_manager.py  client.py  comfy_helpers.py  config.py  council.py  external_models.py  flux_workflow.json  gemma_skills_mcp.py  generation_registry.py  imagegen.py  ltx_workflow.json  manager.py  mcp.py  providers.py  terminal_manager.py  updater.py  videogen.py  wan_workflow.json
justllama/server/skills/: __init__.py  (+6 more)
justllama/ui/: __init__.py
justllama/voice/: __init__.py  manager.py  recorder.py
tests/: conftest.py  test_chat_manager.py  test_context7_skill.py  test_council.py  test_downloader.py  test_env.py  test_external_models.py  test_ingestion.py  test_main.py  test_mcp.py  test_memory.py  test_metadata.py  test_model_browser.py  test_profiles.py  test_retriever.py  test_server_client.py  test_server_config.py  test_settings.py  test_skills.py  test_terminal.py  test_themes.py  test_vectorstore.py  test_voice.py
(+18 files in other folders)
