[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "justllama"
version = "0.1.0"
description = "Desktop GUI wrapper for llama.cpp on Fedora KDE Plasma"
readme = "README.md"
license = "LGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5",
    "requests>=2.31",
    "huggingface_hub>=1.17",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "pymupdf>=1.23",
    "python-docx>=1.0",
    "rank_bm25>=0.2",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.scripts]
justllama = "justllama.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
